# maguey

./: .gitignore  CMakeLists.txt  README.md
cmake/: gl3.cmake
examples/: CMakeLists.txt  mesh_example.cpp  triangle_example.cpp
include/maguey/: camera.hpp  data_buffer.hpp  game.hpp  maguey.hpp  program.hpp  renderable.hpp  shader.hpp  triangle_mesh.hpp  uniform.hpp
include/maguey/internal/: cleanup.hpp  debug_util.hpp  debuggl.hpp
src/: CMakeLists.txt  camera.cpp  data_buffer.cpp  debuggl.cpp  game.cpp  program.cpp  shader.cpp  triangle_mesh.cpp  uniform.cpp
test/: CMakeLists.txt  display_test.cpp
